--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,23 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 include(FetchContent)
 FetchContent_Declare(SFML
-    GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 3.0.1
-    GIT_SHALLOW ON
-    EXCLUDE_FROM_ALL
-    SYSTEM)
+        GIT_REPOSITORY https://github.com/SFML/SFML.git
+        GIT_TAG 3.0.1
+        GIT_SHALLOW ON
+        EXCLUDE_FROM_ALL
+        SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
 add_executable(main src/main.cpp)
+target_sources(main PRIVATE
+        src/Component.cpp
+        src/Paddle.cpp
+        src/RectangleShapeComponent.cpp
+        src/Scene.cpp
+        src/SceneNode.cpp)
+
 target_compile_features(main PRIVATE cxx_std_17)
+
+target_include_directories(main PRIVATE include)
+
 target_link_libraries(main PRIVATE SFML::Graphics)
